ajoute dossier contenant images des recettes et rédaction de la recette oeufs à la coque

--- a/recipes/oeufscoque.html
+++ b/recipes/oeufscoque.html
@@ -8,5 +8,22 @@
 
     <body>
         <h1>Oeufs à la coque</h1>
+        <img src="../images/oeufs.jpg" width="500">
+        <h2>Description</h2>
+            <p>Cette recette vous apprendra à préparer des <strong>oeufs à la coque</strong> en seulement <strong>4 minutes</strong> pour épater vos convives !</p>
+        <h2>Ingrédients</h2>
+            <ul>
+                <li>Oeufs frais</li>
+                <li>Vinaigre ou jus de citron</li>
+                <li>Tranches de pain ou de gruyère</li>
+            </ul>
+        <h2>Préparation</h2>
+            <ol>
+                <li>Pensez à sortir vos oeufs du réfrigérateur 1h avant la cuisson.</li>
+                <li>A l'aide d'une casserole faites chauffer de l'eau puis plongez les oeufs dedans quand celle-ci commence à bouillir.</li>
+                <li>Ajoutez un filet de vinaigre ou de jus de citron dans l'eau pour éviter que les oeufs ne se diluent dedans si la coquille venait à casser.</li>
+                <li>Après 3 minutes de cuisson, sortez les oeufs de l'eau.</li>
+                <li>Pour finir, ajoutez une pincée de sel et dégustez les oeufs accompagnés de mouillettes de pain ou de gruyère !</li>
+            </ol>
     </body>
 </html>
