ajoute lien vers recette des moules et rédaction de la recette des moules

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/oeufscoque.html">Oeufs à la coque</a></li>
+            <li><a href="recipes/moules.html">Moules marinières</a></li>
     </body>
 </html>
