ajoute lien vers recette gâteau à l'index et rédaction de la recette du gâteau

--- a/recipes/gateau.html
+++ b/recipes/gateau.html
@@ -7,29 +7,27 @@
     </head>
 
     <body>
-        <h1>Moules marinières</h1>
-        <img src="../images/moules.jpg" width="500">
+        <h1>Gâteau au chocolat</h1>
+        <img src="../images/gateauchoco.png" width="500">
         <h2>Description</h2>
-            <p>Cette recette vous apprendra à préparer des <strong>moules marinières</strong> simplement et rapidement !</p>
+            <p>Cette recette vous apprendra à préparer un délicieux <strong>gâteau au chocolat</strong> au coeur fondant !</p>
         <h2>Ingrédients</h2>
             <ul>
-                <li>Moules</li>
-                <li>Poivre</li>
-                <li>Sel</li>
-                <li>Persil</li>
-                <li>Cuillère à café de farine</li>
-                <li>30 grammes de beurre ou de margarine</li>
-                <li>2 échalottes</li>
-                <li>15 cl de vin blanc sec</li>
+                <li>100g de sucre en poudre</li>
+                <li>50g de farine</li>
+                <li>100g de beurre + une noix pour beurrer le moule</li>
+                <li>200g de chocolat pâtissier</li>
+                <li>3 oeufs</li>
             </ul>
         <h2>Préparation</h2>
             <ol>
-                <li>Hachez finement les échalottes.</li>
-                <li>Lavez les moules en pensant à les gratter pour retirer toute impureté sur la coquille puis mettez-les dans une cocotte accompagnées
-                d'une noisette de beurre et du vin blanc.</li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Préchauffez le four à 180°C, et faites fondre à feu doux le chocolat et le beurre dans une casserole.</li>
+                <li>Mélangez la farine, les oeufs et le sucre dans un saladier.</li>
+                <li>Ajoutez le chocolat fondu et mélangez pour obtenir une mixture homogène.</li>
+                <li>Beurrez votre moule et ajoutez-y de la farine.</li>
+                <li>Versez la pâte dans le moule.</li>
+                <li>Faites cuire au four pendant environ 20 minutes.</li>
+                <li>A la sortie, le gâteau ne semble pas assez cuit, c'est normal, laissez le refroidir, puis dégustez !</li>
             </ol>
     </body>
 </html>
