--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <ul>
             <li><a href="recipes/oeufscoque.html">Oeufs à la coque</a></li>
             <li><a href="recipes/moules.html">Moules marinières</a></li>
+            <li><a href="recipes/gateau.html">Gâteau au chocolat</a></li>
     </body>
 </html>
