ajout css et alt des images

--- a/recipes/gateau.html
+++ b/recipes/gateau.html
@@ -4,14 +4,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Gâteau au chocolat</h1>
-        <img src="../images/gateauchoco.png" width="500">
-        <h2>Description</h2>
-            <p>Cette recette vous apprendra à préparer un délicieux <strong>gâteau au chocolat</strong> au coeur fondant !</p>
-        <h2>Ingrédients</h2>
+        <h1 class="titre">Gâteau au chocolat</h1>
+        <img src="../images/gateauchoco.png" width="500" alt="Photo de gâteau au chocolat">
+        <h2 class="titre couleur">Description</h2>
+            <p>Cette recette vous apprendra à préparer un délicieux <strong style="background-color: #ffe3e8;">gâteau au chocolat</strong> au coeur fondant !</p>
+        <h2 class="titre couleur">Ingrédients</h2>
             <ul>
                 <li>100g de sucre en poudre</li>
                 <li>50g de farine</li>
@@ -19,7 +20,7 @@
                 <li>200g de chocolat pâtissier</li>
                 <li>3 oeufs</li>
             </ul>
-        <h2>Préparation</h2>
+        <h2 class="titre couleur">Préparation</h2>
             <ol>
                 <li>Préchauffez le four à 180°C, et faites fondre à feu doux le chocolat et le beurre dans une casserole.</li>
                 <li>Mélangez la farine, les oeufs et le sucre dans un saladier.</li>
