--- a/recipes/moules.html
+++ b/recipes/moules.html
@@ -4,14 +4,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Moules marinières</h1>
-        <img src="../images/moules.jpg" width="500">
-        <h2>Description</h2>
-            <p>Cette recette vous apprendra à préparer des <strong>moules marinières</strong> simplement et rapidement !</p>
-        <h2>Ingrédients</h2>
+        <h1 class="titre">Moules marinières</h1>
+        <img src="../images/moules.jpg" width="500" alt="Photo de moules marinières">
+        <h2 class="titre couleur">Description</h2>
+            <p>Cette recette vous apprendra à préparer des <strong style="background-color: #ffe3e8;">moules marinières</strong> simplement et rapidement !</p>
+        <h2 class="titre couleur">Ingrédients</h2>
             <ul>
                 <li>Moules</li>
                 <li>Poivre</li>
@@ -22,7 +23,7 @@
                 <li>2 échalottes</li>
                 <li>15 cl de vin blanc sec</li>
             </ul>
-        <h2>Préparation</h2>
+        <h2 class="titre couleur">Préparation</h2>
             <ol>
                 <li>Hachez finement les échalottes.</li>
                 <li>Lavez les moules en pensant à les gratter pour retirer toute impureté sur la coquille puis mettez-les dans une cocotte accompagnées
