--- a/recipes/oeufscoque.html
+++ b/recipes/oeufscoque.html
@@ -4,20 +4,21 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Oeufs à la coque</h1>
-        <img src="../images/oeufs.jpg" width="500">
-        <h2>Description</h2>
-            <p>Cette recette vous apprendra à préparer des <strong>oeufs à la coque</strong> en seulement <strong>4 minutes</strong> pour épater vos convives !</p>
-        <h2>Ingrédients</h2>
+        <h1 class="titre">Oeufs à la coque</h1>
+        <img src="../images/oeufs.jpg" width="500" alt="Photo d'un oeuf à la coque">
+        <h2 class="titre couleur">Description</h2>
+            <p>Cette recette vous apprendra à préparer des <strong style="background-color: #ffe3e8;">oeufs à la coque</strong> en seulement <strong style="background-color: #ffe3e8;">4 minutes</strong> pour épater vos convives !</p>
+        <h2 class="titre couleur">Ingrédients</h2>
             <ul>
                 <li>Oeufs frais</li>
                 <li>Vinaigre ou jus de citron</li>
                 <li>Tranches de pain ou de gruyère</li>
             </ul>
-        <h2>Préparation</h2>
+        <h2 class="titre couleur">Préparation</h2>
             <ol>
                 <li>Pensez à sortir vos oeufs du réfrigérateur 1h avant la cuisson.</li>
                 <li>A l'aide d'une casserole faites chauffer de l'eau puis plongez les oeufs dedans quand celle-ci commence à bouillir.</li>
