--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="titre">Odin Recipes</h1>
         <ul>
             <li><a href="recipes/oeufscoque.html">Oeufs à la coque</a></li>
             <li><a href="recipes/moules.html">Moules marinières</a></li>
