mise à jour readme

--- a/recipes/oeufscoque.html
+++ b/recipes/oeufscoque.html
@@ -11,7 +11,8 @@
         <h1 class="titre">Oeufs à la coque</h1>
         <img src="../images/oeufs.jpg" width="500" alt="Photo d'un oeuf à la coque">
         <h2 class="titre couleur">Description</h2>
-            <p>Cette recette vous apprendra à préparer des <strong style="background-color: #ffe3e8;">oeufs à la coque</strong> en seulement <strong style="background-color: #ffe3e8;">4 minutes</strong> pour épater vos convives !</p>
+            <p>Cette recette vous apprendra à préparer des <strong style="background-color: #ffe3e8;">oeufs à la coque</strong> en seulement 
+            <strong style="background-color: #ffe3e8;">4 minutes</strong> pour épater vos convives !</p>
         <h2 class="titre couleur">Ingrédients</h2>
             <ul>
                 <li>Oeufs frais</li>
